# ssparse

./: BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  WORKSPACE  build_with_spack_cmake.sh
scripts/: transient.py
src/: main.cc
src/parse/: Engine.cc  Engine.h  Filter.cc  Filter.h  Filter_TEST.cc  util.cc  util.h
test/: transient.sh
